[fix] scrollbar addition

--- a/src/index.css
+++ b/src/index.css
@@ -187,6 +187,7 @@
 
 .table_container::-webkit-scrollbar {
   display: block;
+  width: 6px;
 
 }
 
